--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <h2>Welcome to the Next Gen</h2>
+        <h2>Welcome to the Next Gen obey</h2>
             <p>Here we serve you the best food with good and nourishing ingredients to satisfy your taste.
                 Feel free to choose us and taste what it feels like to be part of the next gen.
             </p>
