Fix typo in About.html header

--- a/About.html
+++ b/About.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>This is talking about what we cook</h1>
+    <h2>This website is basucally about cooking</h2>
 </body>
 </html>
